draft of introduction

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Inflation of Egg Prices Across Canadian Grocery Stores"
+title: "Prominent Factors that Influenced Canadian Egg Prices in 2024"
 author: Tara Chakkithara
 date: "`r Sys.Date()`"
-abstract: "After the COVID-19 pandemic, inflation has been a large economic issue for the majority of Canadians. This analysis studies the inflation of egg prices in 2024 and finds that prices have decreased compared to mid 2024. By understanding how the prices of staple grocery items fluctuate, we can gauge the effect of inflation on the general Canadian consumer."
+abstract: "A multivariate linear regression model was applied to egg pricing data from 2024. Key factors such as farming conditions, vendor, and egg color were identified as significant predictors of egg prices over time. These findings can help consumers make more informed decisions while grocery shopping."
 thanks: "Code available at : https://github.com/redpinecube/grocery "
 format: pdf
 warning: false
@@ -18,9 +18,7 @@ library(RColorBrewer)
 data <- read_csv("../data/clean/clean_data.csv")
 ```
 
-Groceries in Canada have been one of the consumer goods most affected by inflation. According to the Bank of Canada, the main reason for this is because grocery prices are affected by factors such as "cost of energy, labor, and transportation", [@citeBankOfCanada]. Past inflation trends in the United States show that grocieries most affected by inflation are eggs, dairy products, and lettuce. In 2022, egg prices increased by 60% in the United States [@citeCNBC]. This analysis studies Canadian egg prices as they are a common good most people buy and they are heavily impacted by inflation. Another reason why groceries are very expensive is because there is limited competition in the grocery market. Loblaws essentially dominates Canada's market and practices price gouging [@citeAppel].
-
-\newpage
+Groceries in Canada have been one of the consumer goods most affected by inflation. According to the Bank of Canada, key factors driving grocery inflation include, the rising "cost of energy, labor, and transportation" [@citeBankOfCanada]. Historical inflation trends in the United States show that certain grocery items, particularly eggs, dairy products, and lettuce, are especially sensitive to price fluctuations. For example, egg prices in the U.S. surged by 60% in 2022 alone [@citeCNBC]. A lot of research on grocery inflation has been centered around the United States and this analysis broadens the scope a looks at the Canadian grocery sector, specially egg prices. Given that eggs are a staple purchase for most households, understanding the factors influencing their price is crucial for Canadian consumers to make more economic choices. This analysis used a multivariate regression model to predict egg prices and found that factors such as farming conditions, vendor, and egg color impact sale price significantly. The estimands for this paper are the estimated coefficients of the model that quantify predictor srength. This paper is divided into the following section: data, model, results, discussion, and appendix. The data section will give a brief overview of all variables used in analysis. The appendix gives a broader insight into data collection methodology. All other sections are self explanatory.
 
 # Data
 
