--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -404,8 +404,38 @@ This estimator has a RMSE score of 0.08. RMSE was calculated by splitting data i
 
 ## Discussion
 
-The best way to reduce prices is to get rid of the Canadian grocery monopoly. Unfortunately, this is pretty difficult for the average consumer so some actionable ideas are to buy groceries from the brand No Name. Some other ideas are to eat more plant based meals, buy groceries that last longer such as beans and rice in bulk, and meal planning in advance, [@citeHughes].
+This paper examines the key factors influencing egg prices in Canada, with a particular focus on the role of vendor identity. The analysis reveals that while traditional factors—such as egg size, color, and farming method—do have some impact on pricing, vendor selection emerges as the second strongest determinant. These findings suggest that egg prices are more heavily influenced by market dynamics tied to specific vendors than by broader supply-side factors, such as production methods or egg characteristics. This challenges the assumption that the egg market is homogeneous and highlights the significant role vendor-specific practices play in price variation.
 
-This analysis is not perfect due to missing data and bias. Outside of these major grocery chains, there are many smaller farmers who sell their food locally, their prices are not reflected in the data. Additionally, to understand the whole picture of food prices its important to take food substitutions into consideration. When prices are very high, people may opt to use food substitutions, this analysis fails to take food substitutions into account.
+The substantial price discrepancies observed across different vendors point to the possible presence of **oligopolistic behavior** within the egg market. In an oligopoly, a small number of firms exert significant market power, enabling them to influence prices independently of other factors. This could explain the significant fluctuations in egg prices observed between vendors, even when other variables, such as egg size or farming method, remain constant. The concentration of market power among a few dominant vendors could limit competition, allowing them to adjust prices in ways that benefit them, potentially at the expense of consumers.
 
-There is also a correlation between size and price but there are also some discrepancies which may be the result of egg quality. This factor wasn't taken into account in the analysis. We can't say that larger egg sizes cause higher prices.
+Overall, this study underscores the importance of considering **vendor influence** when analyzing egg prices. It challenges the conventional view that factors such as farming practices and egg characteristics are the primary drivers of price. The findings suggest that a deeper understanding of vendor behavior and market concentration is essential for policymakers and consumers alike. Future research should explore these dynamics further, particularly by examining regional market structures, vendor-specific pricing strategies, and potential regulatory interventions aimed at improving market transparency and competition.
+
+### Limitations
+
+While the use of a multivariate linear regression model provides valuable insights, several limitations must be acknowledged.
+
+First, the assumption of **linearity** between the independent variables (e.g., vendor, egg size, farming method) and the dependent variable (egg price) may not fully capture the true relationships. If these relationships are non-linear, the model could provide biased estimates. Additionally, multicolinearity—where variables such as vendor type and farming method are highly correlated—could distort the coefficient estimates, making it difficult to isolate the independent effects of each factor on price.
+
+Another potential limitation is omitted variable bias. The model may not have accounted for important factors such as regional price differences, transportation costs, or seasonal fluctuations in supply and demand, all of which could influence egg prices. Furthermore, the assumption of homoscedasticity (constant variance of errors) may not hold, especially if egg prices exhibit greater variability across different vendors or regions, which could affect the precision of the regression results.
+
+The use of 2024 data raises another concern: temporal factors such as shifts in consumer behavior or changes in government policy might not be fully captured in the analysis. Price dynamics could vary over time, and failure to incorporate these temporal variations may limit the generalizability of the findings.
+
+Lastly, while the analysis identifies vendor as a significant determinant of egg prices, the model may not have fully captured the complexity of **vendor-specific pricing strategies** or **regional market dynamics**, which could vary beyond the variables included in the regression.
+
+### Future Research Directions
+
+While this paper provides valuable insights into the role of vendor identity in shaping egg prices, several avenues for future research remain. One key area for exploration is the causal mechanisms behind the strong influence of vendors on pricing. The reasons for this market behavior—such as vendor pricing strategies, brand loyalty, or regional market power—remain unclear. Future studies could investigate the specific practices that vendors use to set prices and explore how these practices might differ based on market segment, location, or competition levels.
+
+Another promising direction for future research is to explore the impact of marketconcentration. This study suggests that the Canadian egg market may exhibit oligopolistic characteristics, but it does not fully explore how market concentration influences pricing in a dynamic way. Analyzing the relationship between market share, competition, and pricing could offer deeper insights into whether fewer vendors in the market lead to higher or more stable prices, and how this might affect consumers. Comparative studies across other food sectors or countries with different market structures could provide valuable lessons.
+
+Additionally, external factors—such as regulatory policies, consumer behavior, or seasonal supply and demand fluctuations—were not fully incorporated into this analysis. While vendor-specific variables were found to be dominant, it would be important to explore how broader factors like government policies on food pricing or subsidies might affect vendor pricing power. Investigating these external influences could provide a more comprehensive understanding of egg price dynamics.
+
+Finally, this study focused on a specific set of variables and used a **multivariate linear** regression model. Future work could apply alternative modeling techniques, such as machine learning or non-linear models, to capture more complex relationships between pricing and the independent variables. Expanding the dataset to include a larger sample size, longer time periods, or more granular geographic data could also strengthen the robustness and generalizability of the results.
+
+### Smarter Consumer Behavior
+
+While addressing the structural issues of Canada's grocery market—such as its oligopolistic tendencies—remains a challenging task, there are practical steps consumers can take to reduce their grocery bills in the short term. One effective strategy is to purchase store brands, like No Name, which tend to offer more affordable alternatives without compromising quality. In addition, consumers can incorporate more plant-basedmeals into their diets, as plant-based foods like beans, lentils, and grains are often more affordable than animal products. Another cost-saving approach is to buy in bulk, particularly for non-perishable items such as rice, beans, and pasta, which can reduce costs over time. **Meal planning** is also a valuable strategy, helping consumers buy only what they need, reduce food waste, and avoid impulse purchases—ultimately contributing to lower grocery costs \[@citeHughes\].
+
+However, it is important to acknowledge the limitations of this analysis. The data used in this study primarily reflects prices from major grocery chains, which excludes smaller, local farmers and independent food producers who may offer more competitive prices. Local food sources, such as farmers' markets or community-supported agriculture (CSA) programs, might provide more affordable and fresher alternatives, though these are not represented in the data set. Moreover, the analysis does not account for food substitutions that consumers may make when prices rise. For instance, when the price of eggs or meat increases, shoppers may turn to cheaper alternatives, such as plant-based proteins or canned goods. These substitution effects are important to understanding broader consumer behavior but were not considered in this study.
+
+Additionally, the relationship between egg size and price is another important consideration. While larger eggs are often more expensive, the analysis reveals some inconsistencies in this pattern, which could be attributed to differences in egg quality (e.g., free-range vs. conventional eggs). Egg quality was not factored into the analysis, and thus we cannot conclusively state that larger eggs are always more expensive simply due to size—quality and other factors likely play a role.
