--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -439,3 +439,7 @@ While addressing the structural issues of Canada's grocery market—such as its 
 However, it is important to acknowledge the limitations of this analysis. The data used in this study primarily reflects prices from major grocery chains, which excludes smaller, local farmers and independent food producers who may offer more competitive prices. Local food sources, such as farmers' markets or community-supported agriculture (CSA) programs, might provide more affordable and fresher alternatives, though these are not represented in the data set. Moreover, the analysis does not account for food substitutions that consumers may make when prices rise. For instance, when the price of eggs or meat increases, shoppers may turn to cheaper alternatives, such as plant-based proteins or canned goods. These substitution effects are important to understanding broader consumer behavior but were not considered in this study.
 
 Additionally, the relationship between egg size and price is another important consideration. While larger eggs are often more expensive, the analysis reveals some inconsistencies in this pattern, which could be attributed to differences in egg quality (e.g., free-range vs. conventional eggs). Egg quality was not factored into the analysis, and thus we cannot conclusively state that larger eggs are always more expensive simply due to size—quality and other factors likely play a role.
+
+# Appendix
+
+The data collection for this study was based on screen scraping of the website user interfaces (UIs) of eight well-known vendors in Canada, as outlined by Project Hammer \[\@citeDate\]. The screen scraping technique involved programmatically extracting price information for eggs and related product variables from the vendors' online storefronts. This data was specifically gathered through the "in-store pickup" option, as this method typically provides accurate pricing and product availability, reflecting actual prices that consumers would pay when purchasing eggs for pickup rather than delivery. This method is often chosen because it minimizes discrepancies that can arise due to delivery fees or location-specific pricing.While this approach provided valuable data, there are limitations to screen scraping, particularly in the context of price accuracy and completeness. Websites often display product information in a way that is optimized for visual presentation rather than data extraction, which can result in incomplete or inconsistent data. Furthermore, vendor websites are frequently updated, and changes to UI elements or the underlying structure of web pages could lead to the loss of important data or inaccurate price representations.A more robust and comprehensive method of data collection would be the use of internal APIs provided by grocery retailers, which are often more structured and reliable than publicly accessible websites. APIs allow direct access to the retailer's product catalog, offering a more complete and accurate set of product options, prices, and related data, often including various filters and variables not visible on the website UI. In contrast to screen scraping, APIs are typically designed to deliver raw, structured data that can be easily queried, making it a more consistent and efficient data source. For instance, APIs would list not only the eggs available for in-store pickup, but also the full range of products that could be purchased, including promotions, bulk discounts, and regional variations that might not be represented on the website’s UI.Using internal APIs would also mitigate the risk of data loss due to website redesigns or technical issues. A study by Choudhury et al. (2017) on API-based data collection in e-commerce found that using APIs led to more accurate price tracking and more complete product information compared to web scraping, as APIs provide direct access to a vendor’s backend systems [@citeChoudhury]. Moreover, internal APIs often provide real-time data updates, which is particularly important when tracking fluctuating commodity prices like eggs.However, while using APIs presents numerous advantages, it is important to note that this method requires explicit access permissions from the vendors themselves. Retailers may impose limitations on API access, or charge for this data, which could increase the complexity and cost of the data collection process. Additionally, not all grocers may offer open or public APIs, limiting the scope of this method.In summary, while screen scraping of website UIs provided a useful data source for this study, using internal APIs would offer a more robust and scalable approach to data collection, providing more accurate, complete, and timely data for price analysis. Further research in this area could explore how API access could be standardized across the grocery industry to support more comprehensive price tracking and market analysis.
