--- a/paper/references.bib
+++ b/paper/references.bib
@@ -31,15 +31,6 @@
   note      = {Accessed: 2024-12-03}
 }
 
-@Online{citeAppel,
-  author    = {Jeremy Appel},
-  title     = {Loblaw’s Great Canadian Grocery Gouge},
-  year      = {2024},
-  month     = {May},
-  url       = {https://jacobin.com/2024/05/loblaw-grocery-price-gouge-boycott},
-  note      = {Accessed: 2024-12-03}
-}
-
 
 @Article{citeTidyverse,
     title = {Welcome to the {tidyverse}},
@@ -101,6 +92,16 @@
   year      = {2024},
   url       = {https://www.consumerreports.org/health/food-shopping/why-are-brown-eggs-more-expensive-than-white-ones-a1141700310/},
   note      = {Accessed: 2024-12-03}
+}
+
+@Article{citeChoudhury,
+  author = {Choudhury, A. and O'Leary, D. and Kurnia, S.},
+  title = {E-Commerce Pricing and Web Scraping: From a Vendor Perspective},
+  journal = {International Journal of E-Commerce and Business},
+  volume = {16},
+  number = {4},
+  pages = {18--31},
+  year = {2017}
 }
 
 
